--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -123,7 +123,8 @@
         "set_length_limit_prompt": "Please select a length limit.\n\nIf a post is longer than the limit OR cannot be sent in a single message, it will be sent via Telegraph.\nIf sending via Telegraph fails, only its title and source will be sent.",
         "length_limit_only_effective_if_send_mode_auto": "The length limit is effective only when send mode is auto.",
         "display_media_only_effective_if_send_mode_auto_and_telegram": "The current send mode will never display media in Telegram messages.",
-        "use_user_default_button": "Use my default"
+        "use_user_default_button": "Use my default",
+        "read_formatting_settings_guidebook_html": "<a href=\"%s\">Read the formatting settings guidebook here.</a>"
     },
     "l10n_cmd_set_default": {
         "set_user_default_description": "Set the default settings for subscriptions.\n\nThe unset settings of a subscription will fall back to the settings on this page. It is useful if you want to set the same settings for most of your subscriptions.",
