--- a/src/i18n/tr.json
+++ b/src/i18n/tr.json
@@ -123,7 +123,8 @@
         "set_length_limit_prompt": "",
         "length_limit_only_effective_if_send_mode_auto": "",
         "display_media_only_effective_if_send_mode_auto_and_telegram": "",
-        "use_user_default_button": ""
+        "use_user_default_button": "",
+        "read_formatting_settings_guidebook_html": ""
     },
     "l10n_cmd_set_default": {
         "set_user_default_description": "",
