--- a/src/i18n/tr.json
+++ b/src/i18n/tr.json
@@ -52,7 +52,10 @@
         "processing": "İşleniyor, lütfen biraz bekleyin…",
         "canceled_by_user": "Kullanıcı tarafından iptal edildi.",
         "n_subscriptions_in_total": "Toplamda %d abonelik",
-        "other_settings_button": ""
+        "other_settings_button": "",
+        "user": "",
+        "channel": "",
+        "group": ""
     },
     "l10n_cmd_sub": {
         "sub_reply_feed_url_prompt_html": "Lütfen bir RSS beslemesi URL'si ile yanıtlayın.\nVeya toplu abone olmak için <code>/sub url1 url2 url3 …</code> kullanabilirsiniz.",
@@ -180,7 +183,20 @@
         "option_value_type": "Değer türü",
         "option_key_invalid": "Seçenek anahtarı geçersiz",
         "option_value_invalid": "Seçenek değeri geçersiz, lütfen türünü kontrol edin",
-        "option_updated": "Seçenek güncelleştirildi"
+        "option_updated": "Seçenek güncelleştirildi",
+        "cmd_user_info_usage_prompt_html": "",
+        "user_not_found": "",
+        "user_info": "",
+        "sub_count": "",
+        "participant_count": "",
+        "user_state": "",
+        "user_state_-1": "",
+        "user_state_description_-1": "",
+        "user_state_0": "",
+        "user_state_description_0": "",
+        "user_state_1": "",
+        "user_state_description_1": "",
+        "set_user_state_as": ""
     },
     "l10n_cmd_descriptions": {
         "commands": "Komutlar",
@@ -198,6 +214,7 @@
         "cmd_description_lang": "Bir dil seçin",
         "cmd_description_help": "Yardımı görüntüle",
         "cmd_description_test": "Test (yalnızca bot yöneticisi)",
-        "cmd_description_set_option": "Bot seçeneklerini ayarla (yalnızca bot yöneticisi)"
+        "cmd_description_set_option": "Bot seçeneklerini ayarla (yalnızca bot yöneticisi)",
+        "cmd_description_user_info": ""
     }
 }
