--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -110,8 +110,9 @@
         "display_author_0": "Auto",
         "display_author_1": "Force enable",
         "display_via": "Display source",
+        "display_via_-3": "No feed title (link displayed as post title)",
         "display_via_-2": "Completely disable",
-        "display_via_-1": "Only link (hide feed title)",
+        "display_via_-1": "No feed title (only link on the bottom)",
         "display_via_0": "Auto (link displayed as feed title)",
         "display_title": "Display title",
         "display_title_-1": "Disable",
