--- a/src/i18n/yue.json
+++ b/src/i18n/yue.json
@@ -110,8 +110,9 @@
         "display_author_0": "自動",
         "display_author_1": "強制開",
         "display_via": "展示來源",
+        "display_via_-3": "冇 RSS 標題 (連結展示為文章標題)",
         "display_via_-2": "閂晒",
-        "display_via_-1": "僅連結 (收埋 RSS 標題)",
+        "display_via_-1": "冇 RSS 標題 (連結喺底下)",
         "display_via_0": "自動 (連結展示為 RSS 標題)",
         "display_title": "展示標題",
         "display_title_-1": "閂",
