--- a/src/i18n/zh-Hans.json
+++ b/src/i18n/zh-Hans.json
@@ -110,8 +110,9 @@
         "display_author_0": "自动",
         "display_author_1": "强制启用",
         "display_via": "显示来源",
+        "display_via_-3": "无源标题 (链接显示为文章标题)",
         "display_via_-2": "完全禁用",
-        "display_via_-1": "仅链接 (隐藏源标题)",
+        "display_via_-1": "无源标题 (只有链接置于底部)",
         "display_via_0": "自动 (链接显示为源标题)",
         "display_title": "显示标题",
         "display_title_-1": "禁用",
