--- a/src/i18n/zh-Hant.json
+++ b/src/i18n/zh-Hant.json
@@ -110,8 +110,9 @@
         "display_author_0": "自動",
         "display_author_1": "強制啟用",
         "display_via": "顯示來源",
+        "display_via_-3": "無源標題 (鏈接顯示爲文章標題)",
         "display_via_-2": "完全禁用",
-        "display_via_-1": "僅鏈接 (隱藏源標題)",
+        "display_via_-1": "無源標題 (只有鏈接在底部)",
         "display_via_0": "自動 (鏈接顯示爲源標題)",
         "display_title": "顯示標題",
         "display_title_-1": "禁用",
