--- a/src/i18n/tr.json
+++ b/src/i18n/tr.json
@@ -110,6 +110,7 @@
         "display_author_0": "",
         "display_author_1": "",
         "display_via": "",
+        "display_via_-3": "",
         "display_via_-2": "",
         "display_via_-1": "",
         "display_via_0": "",
