feat(*): new sourcing format "Feed title and link displayed as post title"
Signed-off-by: Rongrong <15956627+Rongronggg9@users.noreply.github.com>

--- a/src/i18n/ca.json
+++ b/src/i18n/ca.json
@@ -114,6 +114,7 @@
         "display_via_-2": "",
         "display_via_-1": "",
         "display_via_0": "",
+        "display_via_1": "",
         "display_title": "",
         "display_title_-1": "",
         "display_title_0": "",
