--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -110,11 +110,12 @@
         "display_author_0": "Auto",
         "display_author_1": "Force enable",
         "display_via": "Display source",
-        "display_via_-3": "No feed title (link displayed as post title)",
+        "display_via_-3": "No feed title, link displayed as post title",
         "display_via_-2": "Completely disable",
-        "display_via_-1": "No feed title (only link on the bottom)",
-        "display_via_0": "Auto (link displayed as feed title)",
-        "display_title": "Display title",
+        "display_via_-1": "No feed title, link at the end",
+        "display_via_0": "Feed title and link",
+        "display_via_1": "Feed title and link displayed as post title",
+        "display_title": "Display post title",
         "display_title_-1": "Disable",
         "display_title_0": "Auto",
         "display_title_1": "Force enable",
