--- a/src/i18n/zh-Hans.json
+++ b/src/i18n/zh-Hans.json
@@ -110,11 +110,12 @@
         "display_author_0": "自动",
         "display_author_1": "强制启用",
         "display_via": "显示来源",
-        "display_via_-3": "无源标题 (链接显示为文章标题)",
+        "display_via_-3": "无源标题，链接显示为文章标题",
         "display_via_-2": "完全禁用",
-        "display_via_-1": "无源标题 (只有链接置于底部)",
-        "display_via_0": "自动 (链接显示为源标题)",
-        "display_title": "显示标题",
+        "display_via_-1": "无源标题，链接置于结尾",
+        "display_via_0": "源标题和链接",
+        "display_via_1": "源标题和显示为文章标题的链接",
+        "display_title": "显示文章标题",
         "display_title_-1": "禁用",
         "display_title_0": "自动",
         "display_title_1": "强制启用",
