--- a/src/i18n/tr.json
+++ b/src/i18n/tr.json
@@ -114,6 +114,7 @@
         "display_via_-2": "",
         "display_via_-1": "",
         "display_via_0": "",
+        "display_via_1": "",
         "display_title": "",
         "display_title_-1": "",
         "display_title_0": "",
